--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <html>
-	<title>Call Forward</title>
+	<title>Conference Call</title>
 	<head>
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
 		<link href="static/main.css" rel="stylesheet">
